--- a/materials/templates/materials/material_form.html
+++ b/materials/templates/materials/material_form.html
@@ -9,7 +9,7 @@
                 <div class="col-6">
                     <div class="card">
                         <div class="card-body">
-                            <form method="post">
+                            <form method="post" enctype="multipart/form-data">
                                 {% csrf_token %}
                                 {{ form|crispy }}
                                 <button type="submit" class="btn btn-success">
@@ -22,6 +22,16 @@
                             </form>
                         </div>
                     </div>
+                </div>
+                <div class="col-md-4 p-5">
+                    <form method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {% if object.image %}
+                            <img src="{{ object.image.url }}" alt="photo" height="200" width="auto">
+                        {% else %}
+                            <p>Фото не загружено</p>
+                        {% endif %}
+                    </form>
                 </div>
             </div>
         </div>
