--- a/product/templates/product/product_form.html
+++ b/product/templates/product/product_form.html
@@ -24,7 +24,7 @@
                     <div class="col-md-6">
                         {% if object %}
                             <h3 class="card-title">
-                                Редоктирование продукта
+                                Редактирование продукта
                             </h3>
                             <br>
                         {% else %}
