--- a/materials/templates/materials/material_list.html
+++ b/materials/templates/materials/material_list.html
@@ -4,8 +4,10 @@
     <section class="py-2 text-center container">
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
-                <a class="btn btn-outline-secondary" href="{% url 'materials:material_create' %}">Добавить
-                    материал</a>
+                {% if user.is_authenticated %}
+                    <a class="btn btn-outline-secondary" href="{% url 'materials:material_create' %}">Добавить
+                        материал</a>
+                {% endif %}
             </div>
         </div>
     </section>
@@ -16,28 +18,55 @@
             <div class="row">
                 {% if object_list %}
                     {% for object in object_list %}
-                        <div class="col-4 d-flex flex-column align-items-center">
-                            <div class="card">
-                                <div class="card-header">
-                                    {{ object.title }}
-                                </div>
-                                <div class="card-body">
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <a href="{% url 'materials:material_detail' object.pk %}" type="button"
-                                               class="btn btn-sm btn-outline-secondary">Просмотр</a>
-                                            <a href="{% url 'materials:material_edit' object.pk %}" type="button"
-                                               class="btn btn-sm btn-outline-secondary">Редактирование</a>
-                                            <a href="{% url 'materials:material_delete' object.pk %}" type="button"
-                                               class="btn btn-sm btn-outline-danger">Удалить</a>
+                        {% if not object.is_publish %}
+                            {% if perms.materials.view_material %}
+                                <div class="col-4 d-flex flex-column align-items-center p-3">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            {{ object.title }}
+                                        </div>
+                                        <div class="card-body">
+                                            <div class="d-flex justify-content-between align-items-center">
+                                                <div class="btn-group">
+                                                    <a href="{% url 'materials:material_detail' object.pk %}"
+                                                       type="button"
+                                                       class="btn btn-sm btn-outline-secondary">Просмотр</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="card-footer">
+                                            <p class="red-text">Не опубликовано</p>
                                         </div>
                                     </div>
                                 </div>
+                            {% endif %}
+                        {% else %}
+                            <div class="col-4 d-flex flex-column align-items-center p-3">
+                                <div class="card">
+                                    <div class="card-header">
+                                        {{ object.title }}
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="d-flex justify-content-between align-items-center">
+                                            <div class="btn-group">
+                                                <a href="{% url 'materials:material_detail' object.pk %}"
+                                                   type="button"
+                                                   class="btn btn-sm btn-outline-secondary">Просмотр</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% if perms.materials.view_material %}
+                                        <div class="card-footer">
+                                            <p class="green-text">Опубликовано</p>
+                                        </div>
+                                    {% endif %}
+                                </div>
                             </div>
-                        </div>
+
+                        {% endif %}
                     {% endfor %}
                 {% else %}
-                    Ничего не найдено
+                    Здесь пока ничего нет, Вы будете первым 😊
                 {% endif %}
             </div>
         </div>
