--- a/materials/templates/materials/material_detail.html
+++ b/materials/templates/materials/material_detail.html
@@ -21,15 +21,15 @@
                                 <a href="{% url 'materials:material_list' %}"
                                    class="btn btn-sm btn-outline-secondary">Вернуться</a>
                                 {% if user.is_authenticated %}
-
+                                    {% if object.user == user %}
                                     <a href="{% url 'materials:material_edit' object.pk %}" type="button"
                                        class="btn btn-sm btn-outline-warning">Редактирование</a>
 
                                     {% if user.is_superuser %}
+                                    {% endif %}
                                         <a href="{% url 'materials:material_delete' object.pk %}" type="button"
                                            class="btn btn-sm btn-outline-danger">Удалить</a>
                                     {% endif %}
-
                                 {% endif %}
                             </p>
                             <p class="float-right">
