--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -22,8 +22,10 @@
                     <div class="mt-5 text-center">
                         <a href="{% url 'product:index' %}" class="btn btn-outline-secondary">Вернуться</a>
                         {% if user.is_authenticated %}
-                            <a href="{% url 'product:edit' object.pk %}"
-                               class="btn btn-outline-warning">Редактировать</a>
+                            {% if object.creator == user %}
+                                <a href="{% url 'product:edit' object.pk %}"
+                                class="btn btn-outline-warning">Редактировать</a>
+                            {% endif %}
                         {% endif %}
                         {% if user.is_superuser %}
                             <a href="{% url 'product:delete' object.pk %}" class="btn btn-outline-danger">Удалить</a>
